fixed about section card with overlapping text

--- a/css/main.css
+++ b/css/main.css
@@ -799,7 +799,7 @@ body {
 }
 
 .about .body .main-content .content p {
-  font-size: 16px;
+  font-size: 14.5px;
   line-height: 24px;
 }
 
@@ -869,6 +869,9 @@ body {
   }
   .about .body .main-content .title-content h3 {
     font-size: 35px;
+  }
+  .about .body .main-content .content p {
+    font-size: 16px;
   }
 }
 
