--- a/sass/sections/_about.scss
+++ b/sass/sections/_about.scss
@@ -31,7 +31,7 @@
 
             .content {
                 p{
-                    font-size: 16px;
+                    font-size: 14.5px;
                     line-height: 24px;
                 }
                 
@@ -137,6 +137,12 @@
                     h3 {
                         font-size: 35px;
                     }
+                }
+                .content {
+                    p{
+                        font-size: 16px;
+                    }
+                    
                 }
                
             }
